--- a/_locales/zh-cn/Croco-Kit-strings.json
+++ b/_locales/zh-cn/Croco-Kit-strings.json
@@ -64,17 +64,17 @@
     "CrocoKit_Input.enButton.Press|block": "按下",
     "CrocoKit_Input.enButton.Realse|block": "松开",
 
-    "CrocoKit_Sensor.IR|block": "红外传感器|引脚 %pin|返回 %value",
-    "CrocoKit_Sensor.Sound|block": "声音传感器|引脚 %pin",
-    "CrocoKit_Sensor.Light|block": "光敏传感器|引脚 %pin",
-    "CrocoKit_Sensor.Vibration|block": "震动传感器|引脚 %pin|摇动时",
-    "CrocoKit_Sensor.Hall|block": "霍尔传感器|引脚 %pin|磁铁靠近时",
-    "CrocoKit_Sensor.Ultrasonic|block": "超声波|发射引脚 %Trig|接收引脚 %Echo",
-    "CrocoKit_Sensor.GetRGBValue|block": "颜色传感器|返回 %value",
-    "CrocoKit_Sensor.enGetRGB.GetValueR|block": "R值",
-    "CrocoKit_Sensor.enGetRGB.GetValueG|block": "G值",
-    "CrocoKit_Sensor.enGetRGB.GetValueB|block": "B值",
-    "CrocoKit_Sensor.enObstacle.Obstacle|block": "有障碍",
-    "CrocoKit_Sensor.enObstacle.NoObstacle|block": "无障碍"
+    "SDBR_Sensor.IR|block": "红外传感器|引脚 %pin|返回 %value",
+    "SDBR_Sensor.Sound|block": "声音传感器|引脚 %pin",
+    "SDBR_Sensor.Light|block": "光敏传感器|引脚 %pin",
+    "SDBR_Sensor.Vibration|block": "震动传感器|引脚 %pin|摇动时",
+    "SDBR_Sensor.Hall|block": "霍尔传感器|引脚 %pin|磁铁靠近时",
+    "SDBR_Sensor.Ultrasonic|block": "超声波|发射引脚 %Trig|接收引脚 %Echo",
+    "SDBR_Sensor.GetRGBValue|block": "颜色传感器|返回 %value",
+    "SDBR_Sensor.enGetRGB.GetValueR|block": "R值",
+    "SDBR_Sensor.enGetRGB.GetValueG|block": "G值",
+    "SDBR_Sensor.enGetRGB.GetValueB|block": "B值",
+    "SDBR_Sensor.enObstacle.Obstacle|block": "有障碍",
+    "SDBR_Sensor.enObstacle.NoObstacle|block": "无障碍"
 
 }
