--- a/_locales/zh-tw/Croco-Kit-strings.json
+++ b/_locales/zh-tw/Croco-Kit-strings.json
@@ -65,17 +65,17 @@
     "CrocoKit_Input.enButton.Realse|block": "鬆開",
 
 
-    "CrocoKit_Sensor.IR|block": "紅外傳感器|引腳 %pin|返回 %value",
-    "CrocoKit_Sensor.Sound|block": "聲音傳感器|引腳 %pin ",
-    "CrocoKit_Sensor.Light|block": "光敏傳感器|引腳 %pin ",
-    "CrocoKit_Sensor.Vibration|block": "震動傳感器|引腳 %pin|震動時 ",
-    "CrocoKit_Sensor.Hall|block": "霍爾傳感器|引腳 %pin|磁鐵靠近時",
-    "CrocoKit_Sensor.Ultrasonic|block": "超聲波|發射引腳 %Trig|接收引腳 %Echo",
-    "CrocoKit_Sensor.GetRGBValue|block": "颜色傳感器|返回 %value",
-    "CrocoKit_Sensor.enGetRGB.GetValueR|block": "R值",
-    "CrocoKit_Sensor.enGetRGB.GetValueG|block": "G值",
-    "CrocoKit_Sensor.enGetRGB.GetValueB|block": "B值",
-    "CrocoKit_Sensor.enObstacle.Obstacle|block": "有障礙",
-    "CrocoKit_Sensor.enObstacle.NoObstacle|block": "無障礙"
+    "SDBR_Sensor.IR|block": "紅外傳感器|引腳 %pin|返回 %value",
+    "SDBR_Sensor.Sound|block": "聲音傳感器|引腳 %pin ",
+    "SDBR_Sensor.Light|block": "光敏傳感器|引腳 %pin ",
+    "SDBR_Sensor.Vibration|block": "震動傳感器|引腳 %pin|震動時 ",
+    "SDBR_Sensor.Hall|block": "霍爾傳感器|引腳 %pin|磁鐵靠近時",
+    "SDBR_Sensor.Ultrasonic|block": "超聲波|發射引腳 %Trig|接收引腳 %Echo",
+    "SDBR_Sensor.GetRGBValue|block": "颜色傳感器|返回 %value",
+    "SDBR_Sensor.enGetRGB.GetValueR|block": "R值",
+    "SDBR_Sensor.enGetRGB.GetValueG|block": "G值",
+    "SDBR_Sensor.enGetRGB.GetValueB|block": "B值",
+    "SDBR_Sensor.enObstacle.Obstacle|block": "有障礙",
+    "SDBR_Sensor.enObstacle.NoObstacle|block": "無障礙"
 
 }
